Fixed blur @supports on ios

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -27,7 +27,7 @@
     background-color: rgba(55, 58, 60, 0.95)!important;
 
 
-    @supports (backdrop-filter: blur(10px)) {
+    @supports (backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px)) {
         // Styles that are in here will only apply if backdrop filters are supported by the browser 
          background-color: rgba(55, 58, 60, 0.88)!important;
 
